--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<input type="text" id="item-name-input">
+<input type="text" id="item-price-input">
+<button id="add">Add</button>
+<table>
+  <tr>
+    <th id="item">Item</th>
+    <th id="price">Price</th>
+  </tr>
+  <tr>
+    <td id="total">0</td>
+  </tr>
+</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
